smart_CAR_1/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'E:\keil 5 MDK\ARM\ARMCLANG\Bin'
Build target 'smart_CAR_1'
compiling stm32f1xx_hal_msp.c...
compiling tim.c...
../Core/Src/main.c(85): error: call to undeclared function 'IIC_send_byte'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   85 |   IIC_send_byte((CAM_DEFAULT_I2C_ADDRESS << 1) | 0); // 发送元器件地址+写指令
      |   ^
../Core/Src/main.c(122): error: call to undeclared function 'IIC_send_byte'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  122 |   IIC_send_byte((CAM_DEFAULT_I2C_ADDRESS << 1) | 0); // 发送 器件地址+写的命令
      |   ^
2 errors generated.
compiling main.c...
compiling adc.c...
compiling servo.c...
compiling usart.c...
compiling delay.c...
compiling stm32f1xx_it.c...
compiling stm32f1xx_hal_gpio_ex.c...
compiling gpio.c...
compiling stm32f1xx_hal_adc.c...
compiling stm32f1xx_hal.c...
compiling i2c.c...
compiling busservo.c...
compiling stm32f1xx_hal_rcc_ex.c...
compiling stm32f1xx_hal_rcc.c...
compiling stm32f1xx_hal_adc_ex.c...
compiling stm32f1xx_hal_gpio.c...
compiling stm32f1xx_hal_cortex.c...
compiling stm32f1xx_hal_dma.c...
compiling stm32f1xx_hal_pwr.c...
compiling stm32f1xx_hal_flash.c...
compiling stm32f1xx_hal_exti.c...
compiling system_stm32f1xx.c...
compiling stm32f1xx_hal_flash_ex.c...
compiling stm32f1xx_hal_tim_ex.c...
compiling stm32f1xx_hal_uart.c...
compiling stm32f1xx_hal_tim.c...
compiling stm32f1xx_hal_i2c.c...
"smart_CAR_1\smart_CAR_1.axf" - 2 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
